release/security/destination-rule.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# ----------------------------------------------------------
# WARNING: This file is autogenerated. Do not manually edit.
# ----------------------------------------------------------

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
      app: frontend

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: paymentservice
spec:
  host: paymentservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: paymentservice


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: checkoutservice
spec:
  host: checkoutservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: checkoutservice

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productcatalogservice
spec:
  host: productcatalogservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: productcatalogservice


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendationservice
spec:
  host: recommendationservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: recommendationservice

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: adservice
spec:
  host: adservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: adservice

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cartservice
spec:
  host: cartservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: cartservice

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: currencyservice
spec:
  host: currencyservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: currencyservice
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: emailservice
spec:
  host: emailservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: emailservice

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shippingservice
spec:
  host: shippingservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: shippingservice

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis-cart
  
spec:
  host: redis-cart
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: redis-cart
