release/security/deny-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-cart
spec:
  selector:
    matchLabels:
      app: frontend
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/cart"]
